--- a/webexpertsys/core/templates/core/index.html
+++ b/webexpertsys/core/templates/core/index.html
@@ -5,7 +5,7 @@
 		<h1 class="jumbotron-heading">Планшеты</h1>
 		<p class="lead text-muted">Вы находитесь на странице экспертной системы для подбора планшетных компьютеров. Для начала работы с системой нажмите на кнопку </p>
 		<p>
-		<a href="#" class="btn btn-primary my-2">Подбор планшетов</a>
+        <a href="{% url 'core:dialog' %}" class="btn btn-primary my-2">Подбор планшетов</a>
 		<a href="#" class="btn btn-secondary my-2">Полный список</a>
 		</p>
 	</div>
