--- a/webexpertsys/core/templates/core/index.html
+++ b/webexpertsys/core/templates/core/index.html
@@ -5,8 +5,8 @@
 		<h1 class="jumbotron-heading">Планшеты</h1>
 		<p class="lead text-muted">Вы находитесь на странице экспертной системы для подбора планшетных компьютеров. Для начала работы с системой нажмите на кнопку </p>
 		<p>
-        <a href="{% url 'core:dialog' %}" class="btn btn-primary my-2">Подбор планшетов</a>
-		<a href="#" class="btn btn-secondary my-2">Полный список</a>
+			<a href="{% url 'core:dialog' %}" class="btn btn-primary my-2">Подбор планшетов</a>
+			<a href="{% url 'core:tablet_list' %}" class="btn btn-secondary my-2">Полный список</a>
 		</p>
 	</div>
 </section>
@@ -22,7 +22,7 @@
 						<p class="card-title">{{ name }}</p>
 						<p class="card-text">{{ description }}</p>
 						<div class="d-flex justify-content-between align-items-center">
-							<button type="button" class="btn btn-sm btn-outline-secondary">Просмотр</button>
+							<button type="button" class="btn btn-sm btn-outline-secondary"><a href="{% url 'core:tablet_detail' name.pk %}">Просмотр</a></button>
 						</div>
 					</div>
 				</div>
