--- a/webexpertsys/core/templates/core/base.html
+++ b/webexpertsys/core/templates/core/base.html
@@ -30,8 +30,8 @@
 					}
 				}
 
-				.jumbotron {
-					margin-bottom: 0;
+				.navbar {
+					margin-bottom: 1.5rem;
 				}
 		</style>
 	</head>
@@ -55,7 +55,7 @@
 			</div>
 			<div class="navbar navbar-dark bg-dark shadow-sm">
 				<div class="container d-flex justify-content-between">
-					<a href="#" class="navbar-brand d-flex align-items-center">
+					<a href="{% url 'core:index' %}" class="navbar-brand d-flex align-items-center">
 						<strong>ЭС Планшеты</strong>
 					</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="true" aria-label="Toggle navigation">
@@ -68,6 +68,7 @@
 		<main role="main">{% block content %}{% endblock %}</main>
 
 		<footer class="text-muted">
+			<hr>
 			<div class="container">
 				<p class="float-right">
 					<a href="#">К началу страницы</a>
